src/test/deca/syntax/valid/non_provided/empty_main.deca
// Description:
//    Programme avec uniquement un main vide
//
// Resultats:
//    OK
//
// Historique:
//    cree le 11/01/2020

{
}
